# hse-neural-network-course-project

./: CMakeLists.txt  README.md  main.cpp
src/: activation_function.cpp  activation_function.h  application.cpp  application.h  error_block.cpp  error_block.h  global.h  layer.cpp  layer.h  neural_network.cpp  neural_network.h
src/mnist/: mnist_reader.cpp  mnist_reader.h
src/neural-network/: neural_network.cpp  neural_network.h
src/neural-network/activation-function/: activation_function.cpp  activation_function.h
src/neural-network/layer/: layer.cpp  layer.h
src/neural-network/optimizers/: base_optimizer.cpp  base_optimizer.h
src/neural-network/optimizers/adam/: adam_optimizer.cpp  adam_optimizer.h
src/neural-network/optimizers/gd/: gd_optimizer.cpp  gd_optimizer.h
src/neural-network/optimizers/sag/: sag_optimizer.cpp  sag_optimizer.h
src/neural-network/optimizers/sgd/: sgd_optimizer.cpp  sgd_optimizer.h
src/neural-network/optimizers/sgd_momentum/: sgd_momentum_optimizer.cpp  sgd_momentum_optimizer.h
src/optimizers/: adam_optimizer.cpp  adam_optimizer.h  gd_optimizer.cpp  gd_optimizer.h  optimizer.cpp  optimizer.h  optimizer_creator.h  sag_optimizer.cpp  sag_optimizer.h  sgd_optimizer.cpp  sgd_optimizer.h
tests/: CMakeLists.txt  utils.h
tests/activation-function/: CMakeLists.txt  activation_function_tests.cpp
tests/error-block/: CMakeLists.txt  error_block_tests.cpp
tests/layer/: CMakeLists.txt  layer_tests.cpp
